--- a/views/eagleedu_student.xml
+++ b/views/eagleedu_student.xml
@@ -64,7 +64,7 @@
                                     <td style="padding-right:10px;"><field name="name" placeholder="Name" required="1"/></td>
                                 </tr>
                                 <tr>
-                                    <td style="padding-right:10px;"><field name="name" placeholder="নামের প্রথম অংশ" required="0"/></td>
+                                    <td style="padding-right:10px;"><field name="st_name_b" placeholder="নাম" required="0"/></td>
 
                                 </tr>
                             </table>
@@ -81,25 +81,51 @@
                                 <field name="class_section" string="Section"/>
                                 <field name="roll_no" string="Roll No."/>
                               </group>
-                            <separator string="Student Info"/>
-                            <group>
+                            <separator string="Student Information"/>
                                 <group>
-                                    <field name="email"/>
-                                    <field name="phone"/>
-                                    <field name="mobile"/>
-                                    <field name="name"/>
-                                    <field name="name"/>
-                                </group>
-                            </group>
+                                    <field name="date_of_birth"/>
+                                    <field name="registration_date"/>
+                                    <field name="st_gender"/>
+                                    <field name="st_blood_group"/>
+                                    <field name="religious_id"/>
+                                    <field name="st_passport_no"/>
+                                  </group>
                         </page>
                         <page string="Contact Details">
+                            <separator string="Parent's Information"/>
+                                <group>
+                                    <field name="st_father_name"/>
+                                    <field name="st_father_name_b"/>
+                                    <field name="st_father_occupation"/>
+                                    <field name="father_mobile"/>
+                                    <field name="st_mother_name"/>
+                                    <field name="st_mother_name_b"/>
+                                    <field name="st_mother_occupation"/>
+                                    <field name="mother_mobile"/>
+                                </group>
+
+                               <group string="Present Address">
+                                <field name="house_no"/>
+                                <field name="road_no"/>
+                                <field name="post_office"/>
+                                <field name="city"/>
+                                <field name="bd_division_id"/>
+                                <field name="country_id"/>
+                              </group>
+
+                              <group string="Permanent Address">
+                                <field name="per_village"/>
+                                <field name="per_po"/>
+                                <field name="per_ps"/>
+                                <field name="per_dist_id"/>
+                                <field name="bd_division_id"/>
+                                <field name="country_id"/>
+                              </group>
                         </page>
                         <page string="Class History">
                         </page>
                     </notebook>
-
                 </sheet>
-
             </form>
         </field>
     </record>
